# championship-orb-2025

./: .gitignore  DEPLOYMENT.md  LICENSE.md  README.md  docker-compose.yml
backend/backend-applications/: Dockerfile  README.md  compose.yaml  go.mod  go.sum
backend/backend-applications/cmd/: main.go
backend/backend-applications/docs/: swagger.yaml
backend/backend-applications/keys/: public_key.pem
backend/backend-notifications/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum
backend/backend-notifications/cmd/: main.go
backend/backend-notifications/docs/: swagger.yaml
backend/users-service/: .env  Dockerfile  pyproject.toml  requirements.txt  yappa.yaml  yappa_gw.yaml
backend/users-service/app/: __init__.py  __main__.py  gunicorn_runner.py
certs/l/: fullchain.pem  privkey.pem
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/logo/: icon.icns
client/src/: main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/vault/: crypto.rs  master.rs  mod.rs  secrets.rs  store.rs  tray.rs
docs/: toc.yaml  vault-system.md
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
openbao/: .gitignore  .openbao-keys.example  AUTOMATION.md  Dockerfile  INIT.md  QUICKSTART.md  README.md  SETUP.md  backup-keys.sh  entrypoint.sh  get-root-token.sh  get-unseal-keys.sh  unseal.sh
openbao/config/: config.hcl
openbao/data/: .gitkeep
router/: Dockerfile  nginx.conf
(+142 files in other folders)
