[package]
name = "sema"
version = "0.1.0"
description = "Менеджер секретов"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-opener = "2"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" }
dirs-next = "2"
tauri-plugin-process = "2"
sha2 = "0.10"
keyring = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
